added loading animaton

--- a/source/browser-action-page.html
+++ b/source/browser-action-page.html
@@ -1,10 +1,11 @@
-<!doctype html>
-<meta charset="utf-8">
-<title>AMBOSS</title>
-<link rel="stylesheet" href="chrome://global/skin/in-content/common.css">
-<link rel="stylesheet" href="browser-action-styles.css">
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<link rel="stylesheet" href="chrome://global/skin/in-content/common.css">
+	<link rel="stylesheet" href="browser-action-styles.css">
+	<script type="module" src="browser-polyfill.min.js"></script>
+	<script type="module" src="browser-action-script.js"></script>
+</head>
 <body></body>
-
-<script type="module" src="browser-polyfill.min.js"></script>
-<script src="browser-action-script.js"></script>
+</html>
