--- a/tests/test.html
+++ b/tests/test.html
@@ -10,6 +10,8 @@
 		<p>Strokes</p>
 		<p>Stroke's</p>
 		<p>Stroketic</p>
+		<p>erklären</p>
+		<p>wären</p>
 	<p>
 		Diabetes is due to either the pancreas not producing enough insulin, or the cells of the body not responding properly to the insulin produced.[12] There are three main types of diabetes mellitus:[2]
 
